# ProcMan

./: README.md  pyproject.toml
src/procman/: __init__.py  _containment.py  hooks.py  pool.py  tracker.py
tests/: test_pool.py
